Ref #548: Allow to create a cxfrs endpoint in blueprint